--- a/templates/jboss-as.conf.erb
+++ b/templates/jboss-as.conf.erb
@@ -8,6 +8,9 @@ JBOSS_USER=jbossas
 # 'public' interface Bind address
 JBOSS_BIND_ADDRESS=<%= jbossas_bind_address %>
 
+# 'management' interface Bind address
+JBOSS_BIND_ADDRESS_MANAGEMENT=<%= jbossas_bind_address_management %>
+
 # The amount of time to wait for startup
 #
 # STARTUP_WAIT=30
